# TSPLifesaver

./: LICENSE  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
TSPLifesaver/: optimizer.py  pyproject.toml  structure.py  tools.py
TSPLifesaver/abc/: __init__.py  abc.py
test/: test_optimizer.py  test_structure.py
