[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TSPLifesaver"
version = "0.0.3"
description = "A toolset that simplifies the process of solving TSP (Traveling Salesman Problem) problems. "
authors = [
    { name = "Christian Lee", email = "chrisliyuhan@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
repository = "https://github.com/lxbme/TSPLifesaver"

[tool.black]
line-length = 88
target-version = ['py36']
